# logfire-demo

./: .gitignore  Makefile  README.md  client.py  compute.py  main.py  pyproject.toml
