[project]
name = "logfire_demo"
version = "0.0.1"
authors = [
    { name = "Georgios Karakostas, email = <https://www.linkedin.com/in/geokarak>" },
]
dependencies = [
    "asapi",
    "fastapi",
    "logfire[fastapi,psycopg]",
    "packaging",
    "psycopg[binary]",
    "psycopg-pool",
    "uvicorn",
]

[tool.setuptools]
py-modules = []